--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "~4.13.3",
     "mysql": "~2.9.0",
-    "body-parser": "~1.14.1"
+    "body-parser": "~1.14.1",
+    "ejs": "~2.3.4"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
